# event-processor

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  sources_dataset.csv  Описание.txt
event_processing/: __init__.py  context.py  custom_types.py  processor.py  protocols.py  states.py
