[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Viktor Ivakhnenko <v.ivakhnenko@mypath.group>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.8.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pandas-stubs = "^2.2.3.241126"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
